src/test/ui/issues/issue-28134.stderr
error: only functions may be used as tests
  --> $DIR/issue-28134.rs:3:1
   |
LL | #![test]
   | ^^^^^^^^

error: aborting due to previous error

